Bug 361781 - nsIDomInternalWindow::GetAttention on GTK2 behaves non-optimal r+sr=roc@ocallahan.org (Robert O'Callahan, Novell)